--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <iframe src="head.html">
-    </iframe>
+    <div class="container">
+        <header>
+            <div class="menu">
+                <img src="assets/images/logotest.png" alt="">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="gallery.html">Discografia</a></li>
+                        <li><a href="videos.html">Videos</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="contenido">
+            <div class="section">
+                Section inicio
+            </div>
+            <!-- <div class="aside">
+                Aside
+            </div> -->
+        </div>
+        <div class="footer">
+            Footer
+        </div>
+    </div>
+
 </body>
 </html>
