Primera versión de la Web con el home terminado

--- a/contact.html
+++ b/contact.html
@@ -5,35 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="icon" type="image/jpg" href="../assets/images/Favicon.png"/>
+    <title>The Beatles</title>
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="menu">
-                <img src="assets/images/logotest.png" alt="">
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="gallery.html">Discografia</a></li>
-                        <li><a href="videos.html">Videos</a></li>
-                        <li><a href="contact.html">Contacto</a></li>
-                    </ul>
-                </nav>
+        <header class="Header-Background">
+            <div id="UserPanel">
+                <a class="contact-btn" href="contact.html">Contacto</a>
+                <a class="shop-btn" href="shop.html">Shop</a>
+                <a class="media-btn" href="media.html">Media</a>
+                <a class="home-btn" href="index.html">Home</a> 
             </div>
         </header>
         <div class="contenido">
             <div class="section">
-                Section contacto
+                SECTION
             </div>
-            <!-- <div class="aside">
-                Aside
-            </div> -->
         </div>
         <div class="footer">
-            Footer
+            <div id="footer-img"> 
+                <img src="../assets/images/Footer.png">
+            </div> 
         </div>
     </div>
-
 </body>
 </html>
