--- a/index.html
+++ b/index.html
@@ -5,35 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="icon" type="image/jpg" href="../assets/images/Favicon.png"/>
+    <title>The Beatles</title>
+    <script>
+        let widthInput = document.getElementById("slider-width");
+        widthInput.addEventListener("change", (e) => {
+            let currentValue = e.currentTarget.value;
+            let pSliderWidth = document.getElementById("pSlider");
+            pSliderWidth.style.width = `${currentValue}px`
+            let liSlideWidth = document.getElementsByClassName(".li_slide");
+            for (let i = 0; i < liSlideWidth.length; i++) {
+            liSlideWidth[i].style.width = `${currentValue}px`;
+            }
+            }) 
+            let heightInput = document.getElementById("slider-height");
+            heightInput.addEventListener("change", (e) => {
+            let currentValue = e.currentTarget.value;
+            let pSliderWidth = document.getElementById("pSlider");
+            pSliderWidth.style.height = `${currentValue}px`;
+            let liSlideWidth = document.getElementsByClassName(".li_slide");
+            for (let i = 0; i < liSlideWidth.length; i++) {
+            liSlideWidth[i].style.height = `${currentValue}px`;
+            }
+            })
+    </script>
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="menu">
-                <img src="assets/images/logotest.png" alt="">
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="gallery.html">Discografia</a></li>
-                        <li><a href="videos.html">Videos</a></li>
-                        <li><a href="contact.html">Contacto</a></li>
-                    </ul>
-                </nav>
+        <header class="Header-Background">
+            <div id="UserPanel">
+                <a class="contact-btn" href="contact.html">Contacto</a>
+                <a class="shop-btn" href="shop.html">Shop</a>
+                <a class="media-btn" href="media.html">Media</a>
+                <a class="home-btn" href="index.html">Home</a> 
             </div>
         </header>
         <div class="contenido">
             <div class="section">
-                Section inicio
+                <div id="pSlider">
+                    <ol id="slider-container" dir="ltr">
+                        <li id="slide_1" class="li_slide">
+                            <div class="slide-snapper"></div>
+                            <a class="prev_slide" href="#slide_4"></a>
+                            <a class="next_slide" href="#slide_2"></a>
+                        </li>
+                        <li id="slide_2" class="li_slide">
+                            <div class="slide-snapper"></div>
+                            <a class="prev_slide" href="#slide_1"></a>
+                            <a class="next_slide" href="#slide_3"></a>
+                        </li>
+                        <li id="slide_3" class="li_slide">
+                            It have 4
+                            <div class="slide-snapper"></div>
+                            <a class="prev_slide" href="#slide_2"></a>
+                            <a class="next_slide" href="#slide_4"></a>
+                        </li>
+                        <li id="slide_4" class="li_slide">
+                            <div class="slide-snapper"></div>
+                            <a class="prev_slide" href="#slide_3"></a>
+                            <a class="next_slide" href="#slide_1"></a>
+                        </li>
+                    </ol>
+                </div>
             </div>
-            <!-- <div class="aside">
-                Aside
-            </div> -->
         </div>
         <div class="footer">
-            Footer
+            <div id="footer-img"> 
+                <img src="../assets/images/Footer.png">
+            </div> 
         </div>
     </div>
-
 </body>
 </html>
