--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/eb496abla0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-contact.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -23,9 +26,22 @@
             </div>
         </header>
         <div class="contenido">
-            <div class="section">
-                Section contacto
+            <div class="info-form">
+                <h2> Contactanos </h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, 
+                    dolorum omnis ullam vel accusamus consequuntur non, rem laudantium 
+                    quia soluta impedit fugit, explicabo et! Natus aut tempora accusamus 
+                    error culpa.</p>
+                <a href="#"><i class="fa fa-phone"></i>123-456-789</a>
+                <a href="#"><i class="fa fa-envelope"></i>email@ejemplo.com</a>
+                <a href="#"><i class="fa fa-map"></i>Ciudad, Pais</a>
             </div>
+            <form action="#" autocomplete="off">
+                <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
+                <input type="email" name="email" placeholder="Ingresa tu email" class="campo">
+                <textarea type="text" name="mensaje" placeholder="Ingresa tu mensaje" class="campo"></textarea>
+                <input type="submit" name="enviar" value="enviar mensaje" class="btn-enviar">
+            </form>
             <!-- <div class="aside">
                 Aside
             </div> -->
