--- a/media.html
+++ b/media.html
@@ -36,7 +36,7 @@
                             <div class="container">
                                 <div class="card-section">
                                     <div class="card">
-                                        <video src="./assets/videos/I Want To Hold Your Hand.mp4" autoplay controls>
+                                        <video src="./assets/videos/I Want To Hold Your Hand.mp4" controls>
                                         </video>
                                         <div class="subtitulo">
                                             <p>The Beatles</p>
@@ -45,7 +45,7 @@
                                     </div>
 
                                     <div class="card">
-                                        <video src="./assets/videos/She Loves You REMASTERED.mp4" autoplay
+                                        <video src="./assets/videos/She Loves You REMASTERED.mp4"
                                             controls></video>
                                         <div class="subtitulo">
                                             <p>The Beatles</p>
@@ -54,7 +54,7 @@
                                     </div>
 
                                     <div class="card">
-                                        <video src="./assets/videos/Twist and Shout.mp4" autoplay controls></video>
+                                        <video src="./assets/videos/Twist and Shout.mp4" controls></video>
                                         <div class="subtitulo">
                                             <p>The Beatles</p>
                                             <p>Twist and Shout</p>
