--- a/shop.html
+++ b/shop.html
@@ -19,6 +19,9 @@
             </div>
         </header>
         <div class="contenido">
+            <div style="margin-left:10px; color:white">
+                Valor dolar: <label style="color:rgb(88, 184, 109)" id="valorDolar"></label>
+            </div>
             <div class="section">
                 SECTION
             </div>
@@ -29,5 +32,6 @@
             </div> 
         </div>
     </div>
+    <script src="./js/shop.js"></script>
 </body>
 </html>
