--- a/shop.html
+++ b/shop.html
@@ -25,6 +25,9 @@
                 <div style="margin-left:10px; color:white">
                     Valor dolar: <label style="color:rgb(88, 184, 109)" id="valorDolar"></label>
                 </div>
+                <div Taza="Taza">
+                    Taza de los Beatles
+                </div>
             </div>
         </div>
         <div class="footer">
