--- a/shop.html
+++ b/shop.html
@@ -16,41 +16,178 @@
                 <div class="container">
                     <header class="Header-Background">
                         <div id="UserPanel">
-                            <a class="home-btn" href="index.html">Home</a>
-                            <a class="media-btn" href="media.html">Media</a>
-                            <a class="shop-btn" href="shop.html">Shop</a>
                             <a class="contact-btn" href="contact.html">Contacto</a>
+                            <a class="shop-btn" href="shop.html">Shop</a>
+                            <a class="media-btn" href="media.html">Media</a>
+                            <a class="home-btn" href="index.html">Home</a> 
                         </div>
                     </header>
-                    <div class="contenido">
-                        <div class="section">
+                    <div style="margin-left:10px; color:white">
+                        Valor dolar: <label style="color:rgb(88, 184, 109)" id="valorDolar"></label>
+                    </div>
+                    <div class="contenido-shop">
+                        <div class="galeria">
                             <h2>SECTION</h2>
-                            <div style="margin-left:10px; color:white">
-                                Valor dolar: <label style="color:rgb(88, 184, 109)" id="valorDolar"></label>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/taza.jpg" alt="Taza de los Beatles" style="width:200px"> 
+                                    <div style="margin-left:10px; color:white"> 
+                                        <h3>Taza de los Beatles</h3>
+                                        <p>Precio: $10</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product1"> </div><img src="assets/images/taza.jpg" alt="Taza de los Beatles" style="width:200px"> 
-                            <div style="margin-left:10px; color:white"> 
-                                <h3>Taza de los Beatles</h3>
-                                <p>Precio: $10</p>
-                                <button>Comprar</button>
+                            <div class="item">
+                                <div class="product"> 
+                                        <img src="assets/images/camiseta.jpg" alt="Camiseta de los Beatles" style="width:200px">
+                                        <div style="margin-left:10px; color:white"> 
+                                            <h3>Camiseta de los Beatles</h3>
+                                            <p>Precio: $15</p>
+                                            <button>Comprar</button>
+                                        </div>
+                                </div>
                             </div>
-                            <div class="product2"></div> <img src="assets/images/camiseta.jpg" alt="Camiseta de los Beatles" style="width:200px">
-                                <div style="margin-left:10px; color:white"> 
-                                <h3>Camiseta de los Beatles</h3>
-                                <p>Precio: $15</p>
-                                <button>Comprar</button>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/disco.jpg" alt="Disco de los Beatles" style="width:200px">
+                                    <div style="margin-left:20px; color:white">
+                                        <h3>Disco de los Beatles</h3>
+                                        <p>Precio $20</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product3"></div> <img src="assets/images/disco.jpg" alt="Disco de los Beatles" style="width:200px">
-                                <div style="margin-left:20px; color:white">
-                                <h3>Disco de los Beatles</h3>
-                                <p>Precio $20</p>
-                                <button>Comprar</button>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/cuaderno.jpg" alt="Cuaderno de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Cuaderno de los Beatles</h3>
+                                        <p>Precio $5</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="product4"></div> <img src="assets/images/cuaderno.jpg" alt="Cuaderno de los Beatles" style="width:200px">
-                                <div style="margin-left:30px; color:white">
-                                <h3>Cuaderno de los Beatles</h3>
-                                <p>Precio $5</p>
-                                <button>Comprar</button>
+
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/armonica.png" alt="Armonica de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Armonica de los Beatles</h3>
+                                        <p>Precio $15</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/botella.jpeg" alt="Botella grabada de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Botella grabada de los Beatles</h3>
+                                        <p>Precio $12</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/cartel.jpeg" alt="Cartel de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Cartel de los Beatles</h3>
+                                        <p>Precio $8</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/encendedor.jpeg" alt="Encendedor de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Encendedor de los Beatles</h3>
+                                        <p>Precio $3</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/fansdisco.png" alt="Disco fans de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Disco Fans de los Beatles</h3>
+                                        <p>Precio $25</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/libro.png" alt="Libro de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Libro de los Beatles</h3>
+                                        <p>Precio $14</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/mate.jpeg" alt="Mate de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Mate de los Beatles</h3>
+                                        <p>Precio $18</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/mochila.jpeg" alt="Mochila de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Mochila de los Beatles</h3>
+                                        <p>Precio $12</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/monopoly.jpg" alt="Monopoly de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Monopoly de los Beatles</h3>
+                                        <p>Precio $35</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/muniecos.jpeg" alt="Muñecos de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Muñecos de los Beatles</h3>
+                                        <p>Precio $40</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/remera.jpg" alt="Remera de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Remera de los Beatles</h3>
+                                        <p>Precio $32</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="product"> 
+                                    <img src="assets/images/unias.jpg" alt="Uñas de los Beatles" style="width:200px">
+                                    <div style="margin-left:30px; color:white">
+                                        <h3>Uñas guitarra de los Beatles</h3>
+                                        <p>Precio $18</p>
+                                        <button>Comprar</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
