--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         </div>
         <div class="footer">
             <div id="footer-img"> 
-                <img src="../assets/images/Footer.png">
+                <img src="assets/images/Footer.png">
             </div> 
         </div>
     </div>
