--- a/shop.html
+++ b/shop.html
@@ -193,7 +193,7 @@
                     </div>
                     <div class="footer">
                         <div id="footer-img"> 
-                            <img src="../assets/images/Footer.png" alt="Footer Image">
+                            <img src="assets/images/Footer.png">
                         </div> 
                     </div>
                 </div>
